--- a/index.html
+++ b/index.html
@@ -9,24 +9,36 @@ body {
   align-items: center;
   justify-content: center;
 }
-canvas {
-  background: #a6a6a6;
+table {
+  background: #ffffff;
+  padding: 1em;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+th {
+  text-align: left;
+  padding-right: 1em;
 }
 </style>
 <head profile="http://www.w3.org/2005/10/profile">
 <link rel="icon" type="image/ico" href="favicon.ico"/>
 <meta charset="utf-8"/>
-<title>ThiefRL 2</title>
+<title>James McNeill's Projects</title>
 </head>
 <body>
-<h2>ThiefRL 2</h2>
-<p><canvas id="canvas" width="880" height="760"></canvas></p>
-<ul>
-<li>Numpad 1-9</li>
-<li>Arrow keys (Shift/Ctrl plus Left/Right to move diagonally up/down)</li>
-<li><em>VI</em> keys: H J K L Y U B N</li>
-</ul>
+<h2>James McNeill's Projects</h2>
+<table>
+<tr>
+<th><a href="thiefrl2-web/index.html">ThiefRL 2</a></th>
+<td>Web version; originally a <a href="https://mcneja.itch.io/thiefrl2-2016-7drl">2016 7DRL</a></td>
+</tr>
+<tr>
+<th><a href="disguiser/index.html">Disguiser</a></th>
+<td>2021 7DRL (in progress)</td>
+</tr>
+<tr>
+<th><a href="https://mcneja.itch.io">Itch.io</a></th>
+<td>Other games and toys</td>
+</tr>
+</table>
 </body>
-<script src="game.js"></script>
 </html>
