CSS tweaks to add some spacing

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html lang="en">
 <style>
 body {
-  color: black;
+  margin-top: 2em;
+  color: #505050;
   font-family: arial;
   flex-direction: column;
   background-color: #f0f0f0;
@@ -11,12 +12,20 @@ body {
 }
 table {
   background: #ffffff;
+  color: black;
   padding: 1em;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-collapse: separate;
+  border-spacing: 0;
 }
 th {
-  text-align: left;
-  padding-right: 1em;
+  border-right: 1px solid #a0a0a0;
+}
+th,td {
+  padding: 0.5em;
+}
+th {
+  text-align: right;
 }
 </style>
 <head profile="http://www.w3.org/2005/10/profile">
