Add source links and mobile-friendly meta tag

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@ table {
   border-collapse: separate;
   border-spacing: 0;
 }
-th {
-  border-right: 1px solid #a0a0a0;
-}
 th,td {
   padding: 0.5em;
+}
+td {
+  border-left: 1px solid #a0a0a0;
 }
 th {
   text-align: right;
@@ -31,6 +31,7 @@ th {
 <head profile="http://www.w3.org/2005/10/profile">
 <link rel="icon" type="image/ico" href="favicon.ico"/>
 <meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>James McNeill's Projects</title>
 </head>
 <body>
@@ -39,14 +40,17 @@ th {
 <tr>
 <th><a href="thiefrl2-web/index.html">ThiefRL 2</a></th>
 <td>Web version; originally a <a href="https://mcneja.itch.io/thiefrl2-2016-7drl">2016 7DRL</a></td>
+<td><a href="https://github.com/mcneja/thiefrl2">Source</a></td>
 </tr>
 <tr>
 <th><a href="disguiser/index.html">Disguiser</a></th>
 <td>2021 7DRL (in progress)</td>
+<td><a href="https://github.com/mcneja/disguiser">Source</a></td>
 </tr>
 <tr>
-<th><a href="https://mcneja.itch.io">Itch.io</a></th>
-<td>Other games and toys</td>
+<th><a href="https://mcneja.itch.io">Other</a></th>
+<td>Games and toys</td>
+<td></td>
 </tr>
 </table>
 </body>
