--- a/index.html
+++ b/index.html
@@ -1,31 +1,30 @@
 <html lang="en">
 <style>
 body {
-  margin-top: 2em;
   color: #505050;
   font-family: arial;
+  display: flex;
   flex-direction: column;
   background-color: #f0f0f0;
-  display: flex;
   align-items: center;
-  justify-content: center;
 }
 table {
   background: #ffffff;
   color: black;
-  padding: 1em;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  border-collapse: separate;
-  border-spacing: 0;
+  border-collapse: collapse;
+}
+tr {
+  border-bottom: 2px solid #e0e0e0;
+}
+tr:last-child {
+  border-bottom: none;
 }
 th,td {
-  padding: 0.5em;
-}
-td {
-  border-left: 1px solid #a0a0a0;
+  padding: 1em;
 }
 th {
-  text-align: right;
+  text-align: left;
 }
 </style>
 <head profile="http://www.w3.org/2005/10/profile">
