Put ThiefRL on this page

--- a/index.html
+++ b/index.html
@@ -37,16 +37,21 @@ th {
 <h2>James McNeill's Projects</h2>
 <table>
 <tr>
-<th><a href="thiefrl2-web/index.html">ThiefRL 2</a></th>
-<td>Web version; originally a <a href="https://mcneja.itch.io/thiefrl2-2016-7drl">2016 7DRL</a></td>
-<td><a href="https://github.com/mcneja/thiefrl2">Source</a></td>
-</tr>
-<tr>
 <th><a href="disguiser/index.html">Disguiser</a></th>
-<td>2021 7DRL (in progress)</td>
+<td>2021 7DRL</td>
 <td><a href="https://github.com/mcneja/disguiser">Source</a></td>
 </tr>
 <tr>
+<th><a href="thiefrl2-web/index.html">ThiefRL 2 Web</a></th>
+<td>Port of a <a href="https://mcneja.itch.io/thiefrl2-2016-7drl">2016 7DRL</a></td>
+<td><a href="https://github.com/mcneja/thiefrl2">Source</a></td>
+</tr>
+<tr>
+<tr>
+<th><a href="thiefrl/index.html">ThiefRL</a></th>
+<td>Stealth Roguelike with a fixed map but more atmosphere</td>
+<td></td>
+</tr>
 <th><a href="https://mcneja.itch.io">Other</a></th>
 <td>Games and toys</td>
 <td></td>
