Put a max width on paragraphs so text doesn't get crazy long

--- a/thiefrl/index.html
+++ b/thiefrl/index.html
@@ -8,8 +8,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 10%;
-  margin-right: 10%;
+}
+p {
+  max-width: 50em;
 }
 </style>
 <head profile="http://www.w3.org/2005/10/profile">
