Add meta tag for mobile sizing, and remove erroneous attempt to load a javascript file

--- a/thiefrl/index.html
+++ b/thiefrl/index.html
@@ -15,6 +15,7 @@ p {
 </style>
 <head profile="http://www.w3.org/2005/10/profile">
 <meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>ThiefRL</title>
 </head>
 <body>
@@ -39,5 +40,4 @@ little things in it; I was just trying a lot of things out. You might see a ghos
 the corner of your eye; it doesn't do anything.</p>
 <p><a href="../index.html">Back to projects</a></p>
 </body>
-<script src="game.js"></script>
 </html>
