--- a/thiefrl/index.html
+++ b/thiefrl/index.html
@@ -30,7 +30,7 @@ Douse the torch and pick the lock<br>
 Pilfer every building's stock<br>
 When the dawn arrives you'll be<br>
 Safely sailing o'er the sea.</p>
-<p>Windows executable: <a href="ThiefRL.zip">ThiefRL.zip</a></p>
+<p>Windows executable (112 KB): <a href="ThiefRL.zip">ThiefRL.zip</a></p>
 <p>I made this some time in the 2008 time frame, judging by the dates on the blog posts. It's got a lot more
 features in it than the later version I did for a 7DRL: lock-picking, notes and signs to read, lights and light
 switches, and a neutral sea captain of the ship you're berthed on. He's there to give you a safe place to
@@ -38,6 +38,6 @@ practice the stealth mechanics, and a way to end the game once you've collected 
 <p>The map is fixed, although it is randomly mirrored and the locks are all randomized. There are some goofy
 little things in it; I was just trying a lot of things out. You might see a ghost wandering around out of
 the corner of your eye; it doesn't do anything.</p>
-<p><a href="../index.html">Back to projects</a></p>
+<p><a href="../index.html">Back</a></p>
 </body>
 </html>
