--- a/thiefrl2-web/index.html
+++ b/thiefrl2-web/index.html
@@ -27,6 +27,7 @@ canvas {
 <li>Arrow keys (Shift/Ctrl plus Left/Right to move diagonally up/down)</li>
 <li><em>VI</em> keys: H J K L Y U B N</li>
 </ul>
+<p><a href="../index.html">Back</a></p>
 </body>
 <script src="game.js"></script>
 </html>
