Put a drop-shadow around the image and the doggerel

--- a/thiefrl/index.html
+++ b/thiefrl/index.html
@@ -12,6 +12,14 @@ body {
 p {
   max-width: 50em;
 }
+img {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+p.poem {
+  background-color: white;
+  padding: 1em;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 </style>
 <head profile="http://www.w3.org/2005/10/profile">
 <meta charset="utf-8"/>
@@ -22,7 +30,7 @@ p {
 <h2>ThiefRL</h2>
 <p>The Thief-like Rogue-like</p>
 <p><img src="big-tiles.gif"/></p>
-<p>Through the streets and courtyards creeping<br>
+<p class="poem">Through the streets and courtyards creeping<br>
 While the populace is sleeping<br>
 Guards patrol to keep you out<br>
 If they see you they will shout<br>
