First version of the FMM demo

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@ th {
 <h2>James McNeill's Projects</h2>
 <table>
 <tr>
+<th><a href="fmmweb/index.html">FMMWeb</a></th>
+<td>Javascript/WebGL demo of fast marching method</td>
+<td><a href="https://github.com/mcneja/fmmweb">Source</a></td>
+</tr>
+<tr>
 <th><a href="disguiser/index.html">Disguiser</a></th>
 <td>2021 7DRL</td>
 <td><a href="https://github.com/mcneja/disguiser">Source</a></td>
