A bunch of work to make player control and obstacles

--- a/fmmweb/index.html
+++ b/fmmweb/index.html
@@ -43,7 +43,7 @@ canvas {
 <canvas id="canvas"></canvas>
 </div>
 </div>
-<p>Blue discs follow the gradient to the goal.</p>
+<p>Click on play area to control yellow disc with the mouse. Esc to exit.</p>
 </div>
 </body>
 <script src="fmm.js"></script>
