--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@ th {
 <h2>James McNeill's Projects</h2>
 <table>
 <tr>
+<th><a href="7drl-2022/index.html">7DRL 2022</a></th>
+<td>Rogue/XQuest2 Mashup</td>
+<td><a href="https://github.com/mcneja/7drl-2022">Source</a></td>
+</tr>
+<tr>
 <th><a href="fmmweb/index.html">FMMWeb</a></th>
 <td>Javascript/WebGL demo of fast marching method</td>
 <td><a href="https://github.com/mcneja/fmmweb">Source</a></td>
