Update project title

--- a/7drl-2022/index.html
+++ b/7drl-2022/index.html
@@ -37,7 +37,7 @@ canvas {
 <link rel="icon" type="image/ico" href="favicon.ico"/>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>2022 7DRL</title>
+<title>Amulet Raider (2022 7DRL)</title>
 </head>
 <body>
 <div class="column">
