--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ th {
 <h2>James McNeill's Projects</h2>
 <table>
 <tr>
-<th><a href="7drl-2022/index.html">7DRL 2022</a></th>
-<td>Rogue/XQuest2 Mashup</td>
+<th><a href="7drl-2022/index.html">Amulet Raider</a></th>
+<td>Rogue/XQuest2 mashup made for 2022 7DRL</td>
 <td><a href="https://github.com/mcneja/7drl-2022">Source</a></td>
 </tr>
 <tr>
