Adjust wording to be similar to previous years' entries

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ th {
 <table>
 <tr>
 <th><a href="7drl-2022/index.html">Amulet Raider</a></th>
-<td>Rogue/XQuest2 mashup made for 2022 7DRL</td>
+<td>2022 7DRL: Rogue/XQuest2 mashup</td>
 <td><a href="https://github.com/mcneja/7drl-2022">Source</a></td>
 </tr>
 <tr>
