--- a/index.html
+++ b/index.html
@@ -57,11 +57,16 @@ th {
 <td><a href="https://github.com/mcneja/thiefrl2">Source</a></td>
 </tr>
 <tr>
-<tr>
 <th><a href="thiefrl/index.html">ThiefRL</a></th>
 <td>Stealth Roguelike with a fixed map but more atmosphere</td>
 <td></td>
 </tr>
+<tr>
+<th><a href="dun-gen/index.html">Dungeon Generator</a></th>
+<td>Experimenting with lock-and-key layouts</td>
+<td></td>
+</tr>
+<tr>
 <th><a href="https://mcneja.itch.io">Other</a></th>
 <td>Games and toys</td>
 <td></td>
