Party People first WIP

--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@ th {
 <td></td>
 </tr>
 <tr>
+<th><a href="party-people/index.html">Party People</a></th>
+<td>Player+NPC party movement experiments</td>
+<td></td>
+</tr>
+<tr>
 <th><a href="https://mcneja.itch.io">Other</a></th>
 <td>Games and toys</td>
 <td></td>
