--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ th {
 <tr>
 <th><a href="party-people/index.html">Party People</a></th>
 <td>Player+NPC party movement experiments</td>
-<td></td>
+<td><a href="https://github.com/mcneja/party-people">Source</a></td>
 </tr>
 <tr>
 <th><a href="https://mcneja.itch.io">Other</a></th>
