Update website version of hamilton-hack, and make it visible on the website front page.

--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@ th {
 <td></td>
 </tr>
 <tr>
+<th><a href="hamilton-hack/index.html">Hacking Mini-Game</a></th>
+<td>Simple hacking mini-game inspired by Hamiltonian paths</td>
+<td><a href="https://github.com/mcneja/hamilton-hack">Source</a></td>
+</tr>
+<tr>
 <th><a href="dun-gen/index.html">Dungeon Generator</a></th>
 <td>Experimenting with lock-and-key layouts</td>
 <td></td>
