--- a/hamilton-hack/index.html
+++ b/hamilton-hack/index.html
@@ -1,51 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<style>
-a {
-  color: #ddd;
-}
-body {
-  margin-left: 1rem;
-  margin-right: 1rem;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-family: sans-serif;
-  background-color: #222;
-  color: #ddd;
-}
-.column {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.canvas-container {
-  width: 100%;
-  max-height: 92vh;
-  aspect-ratio: 1/1;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
-  background-color: #222;
-}
-canvas {
-  position: absolute;
-}
-</style>
-<head profile="http://www.w3.org/2005/10/profile">
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Hamiltonian Hacking Minigame</title>
-</head>
-<body>
-<div class="column">
-<div class="canvas-container">
-<canvas id="canvas"></canvas>
-</div>
-<p class="center"><a href="../index.html">Back</a></p>
-</div>
-</body>
-<script type="module" src="my-matrix.js"></script>
-<script type="module" src="game.js"></script>
-</html>
+<!DOCTYPE html><html lang="en"><head profile="http://www.w3.org/2005/10/profile"><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Hamiltonian Hacking Minigame</title><link rel="stylesheet" href="/index.4c0d9f57.css"></head><body> <div class="column"> <div class="canvas-container"> <canvas id="canvas"></canvas> </div> <p>Reroute the greenish-yellow path so it doesn't cross any black obstacles. It must also not have any disconnected loops. Use mouse or touch to rotate pairs of parallel edges by 90 degrees. Other keys: R to restart with a new puzzle, PageUp to go to a smaller puzzle size, and PageDown to go to a larger puzzle size.</p>  </div> </body><script type="module" src="/index.43600d6c.js"></script></html>
