--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ th {
 <h2>James McNeill's Projects</h2>
 <table>
 <tr>
-<th><a href="7drl-2023/index.html">Lurk, Leap, Loot</a></th>
-<td>2023 7DRL</td>
+<th><a href="7drl-2023/index.html">LLLOOOT!</a></th>
+<td>2023 7DRL (expanded): Turn-based thievery</td>
 <td><a href="https://github.com/mcneja/7drl-2023">Source</a></td>
 </tr>
 <tr>
