Add Weaver modulation experiment to website

--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@ th {
 <td></td>
 </tr>
 <tr>
+<th><a href="weaver/index.html">Weaver Modulation</a></th>
+<td>Interactive SSB Tuning simulation</td>
+<td></td>
+</tr>
+<tr>
 <th><a href="https://mcneja.itch.io">Other</a></th>
 <td>Games and toys</td>
 <td></td>
