Add markers to the frequency-shift slider

--- a/weaver/index.html
+++ b/weaver/index.html
@@ -45,7 +45,19 @@
             value="0"
             step="any"
             data-action="frequency"
+            list="frequency-markers"
           />
+          <datalist id="frequency-markers">
+            <option value="-6000"></option>
+            <option value="-4500"></option>
+            <option value="-3000"></option>
+            <option value="-1500"></option>
+            <option value="0"></option>
+            <option value="1500"></option>
+            <option value="3000"></option>
+            <option value="4500"></option>
+            <option value="6000"></option>
+          </datalist>
         </td>
       </tr>
       <tr>
