--- a/weaver/index.html
+++ b/weaver/index.html
@@ -77,8 +77,7 @@
       </tr>
     </table>
 
-    <!-- type="audio/mpeg" -->
-    <audio src="bob_and_ray_1957.mp3" crossorigin="anonymous"></audio>
+    <audio src="bob_and_ray_1957.mp3" type="audio/mpeg" preload="metadata"></audio>
 
     <script type="text/javascript">
       console.clear();
