--- a/weaver/index.html
+++ b/weaver/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Weaver Modulation</title>
-    <meta name="description" content="Audio basics demo for Web Audio API" />
+    <meta name="description" content="Single-sideband tuning simulation, via Weaver modulation" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -77,7 +77,7 @@
       </tr>
     </table>
 
-    <audio src="bob_and_ray_1957.mp3" type="audio/mpeg" preload="metadata"></audio>
+    <audio src="bob_and_ray_1957_48k.mp3" type="audio/mpeg" preload="auto"></audio>
 
     <script type="text/javascript">
       console.clear();
