Add some descriptive text

--- a/weaver/index.html
+++ b/weaver/index.html
@@ -74,6 +74,12 @@
         </td>
       </tr>
     </table>
+    <p>
+      A simple sonic emulation of single-sideband radio tuning. Uses the Weaver method to shift the frequencies up or down, with a window around 300-3000 Hz.
+    </p>
+    <p>
+      The sample audio is a 1957 Bob and Ray radio comedy show, from archive.org.
+    </p>
 
     <audio src="bob_and_ray_1957_48k.mp3" type="audio/mpeg" preload="auto"></audio>
 
